refactor: install yandex-map, react-icons

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pbe/react-yandex-maps": "^1.2.2",
     "iconsax-react": "^0.0.8",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "swiper": "^9.1.0"
   },
   "devDependencies": {
