refactor: insall framer motion

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@pbe/react-yandex-maps": "^1.2.2",
+    "framer-motion": "^10.2.3",
     "iconsax-react": "^0.0.8",
     "next": "13.2.3",
     "react": "18.2.0",
